[tool.poetry]
name = "fingerprint-opencv-python"
version = "0.1.0"
description = "A project for fingerprint processing and recognition using OpenCV."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"